gitops/espresso/apps/netbird/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    gateway-access: public
