gitops/espresso/apps/netbird/coturn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-coturn
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-coturn
  template:
    metadata:
      labels:
        app: netbird-coturn
      annotations:
        secret.reloader.stakater.com/reload: netbird-coturn-config
    spec:
      containers:
        - name: coturn
          image: coturn/coturn:4.18.0@sha256:59af4221a2c45c1195a1a4a865542b3ea744be1dd8e228d11bde87c6631081cf
          command: ["/bin/bash", "-c"]
          args:
            - |
              EXTERNAL_IP=$(/usr/local/bin/detect-external-ip.sh --ipv4 2>/dev/null) || true
              exec turnserver -c /etc/coturn/turnserver.conf ${EXTERNAL_IP:+-X "$EXTERNAL_IP"}
          ports:
            - containerPort: 3478
              name: stun
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/coturn/turnserver.conf
              name: config
              subPath: turnserver.conf
      volumes:
        - name: config
          secret:
            secretName: netbird-coturn-config
