gitops/espresso/apps/netbird/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-dashboard
  template:
    metadata:
      labels:
        app: netbird-dashboard
      annotations:
        secret.reloader.stakater.com/reload: netbird-dashboard-env
    spec:
      containers:
        - name: dashboard
          image: netbirdio/dashboard:v2.94.0@sha256:86f5fbb16c5bae1918dc2f09da6182144c30e45ecf75d7902038743094e7bdcd
          ports:
            - containerPort: 80
              name: http
