gitops/espresso/apps/netbird/relay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-relay
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-relay
  template:
    metadata:
      labels:
        app: netbird-relay
      annotations:
        secret.reloader.stakater.com/reload: netbird-relay-env
    spec:
      containers:
        - name: relay
          image: netbirdio/relay:0.80.0@sha256:1aff236dc73fde48857d6619816f442daa1035758f4d38a208c7b46752836484
          ports:
            - containerPort: 33080
              name: relay
