gitops/espresso/apps/netbird/server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: netbird-server
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-server
  serviceName: netbird-server-internal
  template:
    metadata:
      labels:
        app: netbird-server
      annotations:
        secret.reloader.stakater.com/reload: netbird-server-config
    spec:
      containers:
        - name: management
          image: netbirdio/management:0.80.0@sha256:8bb1b26f3c8de72420c6a0dd40b979e619f8d05c6b3154e74efc0f471f4967fc
          args:
            - --port
            - "80"
            - --log-file
            - console
            - --log-level
            - info
            - --disable-anonymous-metrics=true
          ports:
            - containerPort: 80
              name: http
            - containerPort: 9090
              name: metrics
          startupProbe:
            httpGet:
              path: /api/instance
              port: http
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /api/instance
              port: http
          readinessProbe:
            httpGet:
              path: /api/instance
              port: http
          volumeMounts:
            - mountPath: /etc/netbird
              name: config
              readOnly: true
            - mountPath: /var/lib/netbird
              name: data
      volumes:
        - name: config
          secret:
            secretName: netbird-server-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: nvme-ha
