gitops/espresso/apps/netbird/signal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-signal
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-signal
  template:
    metadata:
      labels:
        app: netbird-signal
    spec:
      containers:
        - name: signal
          image: netbirdio/signal:0.80.0@sha256:d0fe9d51cdbac2542dffabc85066d897f628cca57f1aa08328639777b496d5b4
          args:
            - --port
            - "10000"
            - --log-file
            - console
            - --log-level
            - info
          ports:
            - containerPort: 10000
              name: signal
