gitops/espresso/apps/netbird/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-signal
  namespace: netbird
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - netbird.gullhaugveien.michaelbrusegard.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /signalexchange.SignalExchange
      backendRefs:
        - name: netbird-signal
          port: 10000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-management-grpc
  namespace: netbird
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - netbird.gullhaugveien.michaelbrusegard.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /management.ManagementService
      backendRefs:
        - name: netbird-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /management.ProxyService
      backendRefs:
        - name: netbird-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-relay
  namespace: netbird
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - netbird.gullhaugveien.michaelbrusegard.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /relay
      backendRefs:
        - name: netbird-relay
          port: 33080
    - matches:
        - path:
            type: PathPrefix
            value: /ws-proxy
      backendRefs:
        - name: netbird-relay
          port: 33080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-api
  namespace: netbird
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - netbird.gullhaugveien.michaelbrusegard.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: netbird-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - netbird-admin.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: netbird-dashboard
          port: 80
